[tool.poetry]
name = "mormon-research"
version = "0.1.0"
description = ""
authors = ["ec1302 <ec1302@georgetown.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
networkx = "^3.3"
gensim = "^4.3.3"
nltk = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
